--- a/ai-yield-optimizer/subgraph.yaml
+++ b/ai-yield-optimizer/subgraph.yaml
@@ -48,3 +48,38 @@ dataSources:
         - event: Swap(indexed address,indexed address,int256,int256,uint160,uint128,int24)
           handler: handleSwap
       file: ./src/uniswap-v-3-pool.ts
+  - kind: ethereum
+    name: UniswapV2Pair
+    network: mainnet
+    source:
+      address: "0xceff51756c56ceffca006cd410b03ffc46dd3a58"
+      abi: UniswapV2Pair
+      startBlock: 10840845
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - Approval
+        - UniswapV2PairBurn
+        - UniswapV2PairMint
+        - UniswapV2PairSwap
+        - Sync
+        - Transfer
+      abis:
+        - name: UniswapV2Pair
+          file: ./abis/UniswapV2Pair.json
+      eventHandlers:
+        - event: Approval(indexed address,indexed address,uint256)
+          handler: handleApproval
+        - event: Burn(indexed address,uint256,uint256,indexed address)
+          handler: handleBurn
+        - event: Mint(indexed address,uint256,uint256)
+          handler: handleMint
+        - event: Swap(indexed address,uint256,uint256,uint256,uint256,indexed address)
+          handler: handleSwap
+        - event: Sync(uint112,uint112)
+          handler: handleSync
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+      file: ./src/uniswap-v-2-pair.ts
