--- a/hardhat-liquidity/package.json
+++ b/hardhat-liquidity/package.json
@@ -5,6 +5,7 @@
     "hardhat": "^2.22.18"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.2.0"
+    "@openzeppelin/contracts": "^5.2.0",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0"
   }
 }
