--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
   "name": "ai-yield-optimizer",
-  "version": "0.1.0",
-  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "codegen": "graph codegen",
+    "build": "graph build",
+    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ memery1446/ai-yield-optimizer",
+    "create-local": "graph create --node http://localhost:8020/ memery1446/ai-yield-optimizer",
+    "remove-local": "graph remove --node http://localhost:8020/ memery1446/ai-yield-optimizer",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 memery1446/ai-yield-optimizer",
+    "test": "graph test"
   },
   "dependencies": {
-    "@apollo/client": "^3.12.11",
-    "graphql": "^16.10.0",
-    "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@graphprotocol/graph-cli": "0.95.0",
+    "@graphprotocol/graph-ts": "0.36.0"
   },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.17"
-  }
+  "devDependencies": { "matchstick-as": "0.6.0" }
 }
