--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -61,9 +61,9 @@ dataSources:
       language: wasm/assemblyscript
       entities:
         - Approval
-        - UniswapV2PairBurn
-        - UniswapV2PairMint
-        - UniswapV2PairSwap
+        - Burn
+        - Mint
+        - Swap
         - Sync
         - Transfer
       abis:
