--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
     "@graphprotocol/graph-cli": "0.95.0",
     "@graphprotocol/graph-ts": "0.36.0"
   },
-  "devDependencies": { "matchstick-as": "0.6.0" }
+  "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@openzeppelin/contracts": "^5.2.0",
+    "dotenv": "^16.4.7",
+    "ethers": "^6.13.5",
+    "hardhat": "^2.22.19",
+    "matchstick-as": "0.6.0"
+  }
 }
