--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "ai-yield-optimizer",
+  "version": "0.1.0",
+  "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "codegen": "graph codegen",
-    "build": "graph build",
+    "graph-build": "graph build",
     "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ memery1446/ai-yield-optimizer",
     "create-local": "graph create --node http://localhost:8020/ memery1446/ai-yield-optimizer",
     "remove-local": "graph remove --node http://localhost:8020/ memery1446/ai-yield-optimizer",
@@ -12,15 +18,25 @@
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.95.0",
-    "@graphprotocol/graph-ts": "0.36.0"
+    "@graphprotocol/graph-ts": "0.36.0",
+    "next": "15.1.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/contracts": "^5.2.0",
+    "@types/react": "19.0.10",
+    "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.7",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.7",
     "ethers": "^6.13.5",
     "hardhat": "^2.22.19",
-    "matchstick-as": "0.6.0"
+    "matchstick-as": "0.6.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.17"
   }
 }
